<resources>
    <string name="app_name">vAirPurifier</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Máy lọc không khí</string>
    <string name="nav_header_subtitle">Trung tâm nghiên cứu thiết bị Y Tế (VHT)</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Màn hình chính</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Công cụ</string>
    <string name="menu_share">Chia sẻ</string>
    <string name="menu_send">Send</string>
    <string name="air_status">Tình trạng không khí</string>
    <string name="menu_remote_control">Điều khiển từ xa</string>
    <string name="menu_air_remote_control">Điểu khiển máy lọc không khí</string>
    <string name="menu_information">Ngưỡng đo</string>

<!--    String for fan mitsubishi-->
    <string name="fan_mitsubishi">Mitsubishi LV16-RT</string>
<!--    String for button in fan mitsubishi-->
    <string name="bt_connect">Kết nối</string>
    <string name="fan_speed">Tốc độ</string>
    <string name="fan_power">Bật/Tắt</string>
    <string name="fan_swing">Quay</string>
    <string name="fan_rhythm">Thay đổi nhịp độ</string>
    <string name="fan_timer">Thời gian tắt</string>

<!--    String for status screen in remote control-->
    <string name="connecting_status">Đang kết nối</string>
    <string name="connected_status">Đã kết nối</string>
    <string name="bt_try_again">Thử lại</string>
    <string name="bt_pass">Bỏ qua</string>
    <string name="msg_lost_connection">Không thể kết nối tới máy chủ (Hãy kiểm tra lại đường truyền mạng)</string>
    <string name="title_lost_connection">Mất kết nối</string>
    <string name="msg_no_response_from_device">Thiết bị không phản hồi hoặc máy chủ giám sát không phải hồi! \nHãy liên hệ với tamnd12@viettel.com.vn hoặc tuanvd10@viettel.com.vn</string>
    <string name="msg_no_response_from_service">Máy chủ giám sát không phản hồi! \nHãy liên hệ với tuanvd10@viettel.com.vn</string>
    <string name="check_smart_plug_and_remote">Hãy kiểm tra lại ổ cắm điện và thiết bị điều khiển (Không thể kết nối tới thiết bị)</string>
    <string name="not_connected">Chưa kết nối</string>
    <string name="error">Lỗi</string>
    <string name="info">Thông báo</string>
    <string name="OK">OK</string>
    <string name="error_not_found_device_id">Không thể tìm thấy thiết bị điều khiển</string>
    <string name="cannot_remote_device">Không thể điều khiển thiết bị</string>
<!--    String for state in air condition-->
    <string name="air_purifier">Máy lọc không khí</string>
    <string name="state_1">Yếu</string>
    <string name="state_2">Trung bình</string>
    <string name="state_3">Mạnh</string>
    <string name="speed_title">Tốc độ</string>
    <string name="power_title">Nguồn</string>
    <string name="state_power_on">Bật</string>
    <string name="state_power_off">Tắt</string>


<!--    String for test-->
    <string name="test">Test</string>
    <string name="test_number">0</string>

    <!-- String for Air Parameter -->
    <string name="AQ">AQ</string>
    <string name="CO2">CO\u2082</string>
    <string name="H2CO">CH\u2082O</string>
    <string name="HM">Độ ẩm</string>
    <string name="Pressure">Áp suất</string>
    <string name="Temperature">Nhiệt độ</string>
    <string name="VOC">VOC</string>
    <string name="PM1">PM1</string>
    <string name="PM10">PM10</string>
    <string name="PM25">PM2.5</string>
    <string name="PM">PM</string>

    <string name="good">Tốt</string>
    <string name="mod">Khá</string>
    <string name="poor">Kém</string>
    <string name="power_on">Bật Nguồn</string>
    <string name="power_off">Tắt Nguồn</string>
    <string name="uv_on">Bật UV</string>
    <string name="uv_off">Tắt UV</string>

    <string name="online">Đang hoạt động</string>    // online status
    <string name="active">Hoạt động</string> // active time

    <string name="name_device">Tên thiết bị</string>
    <string name="state_of_device">Trạng thái hiện tại</string>
    <string name="speed_of_device">Tốc độ quạt</string>

    <string name="speed_0">0</string>
    <string name="speed_1">1</string>
    <string name="speed_2">2</string>
    <string name="speed_3">3</string>

    <string name="status_title">Trạng thái</string>

    <string name="mode_auto">Tự động</string>
    <string name="mode_manual">Thủ công</string>
    <string name="mode_loading">Đang tải</string>

    <!--resource for layout-->
    <string name="margin_remote_button_with_center">20dp</string>

    <!--Information of threshold-->
    <string name="info_aqi">Chất lượng không khí</string>
    <string name="info_aqi_content">Điểm số chất lượng không khí theo theo thời gian thực được xác định bởi dữ liệu được lấy bở thiết bị Airthix IAQ và các giải thuật nâng cao nhằm cung cấp cho người sử dụng một cái nhìn tổng quan về chất lượng không khí trong nhà của họ</string>

    <string name="info_header">Chỉ số</string>

    <string name="info_threshold">Thông tin ngưỡng</string>

    <!--Threshold-->
    <!--Pm-->
    <string name="info_header_pm">Bụi mịn (PM)</string>
    <string name="info_good_pm">Nhỏ hơn 25.4 µg/m³</string>
    <string name="info_mod_pm">Từ 25.4 µg/m³ đến 55.4 µg/m³</string>
    <string name="info_poor_pm">Lớn hơn 55.4 µg/m³</string>
    <!--Temperature-->
    <string name="info_header_temperature">Nhiệt độ</string>
    <string name="info_poor_temperature">Lớn hơn 30 ℃ hoặc nhỏ hơn 16 ℃</string>
    <string name="info_mod_temperature">Từ 16 ℃ đến 20 ℃\nTừ 24.4 ℃ đến 30 ℃</string>
    <string name="info_good_temperature">Từ 20 ℃ đến 24.4 ℃</string>
    <!--Humidity-->
    <string name="info_header_humidity">Độ ẩm</string>
    <string name="info_poor_humidity">Nhỏ hơn 30% hoặc lớn hơn 65%</string>
    <string name="info_mod_humidity">Từ 30% đến 45%\nTừ 60% đến 65%</string>
    <string name="info_good_humidity">Từ 45% đến 60%</string>
    <!--Co2-->
    <string name="info_header_co2">Nồng độ CO\u2082</string>
    <string name="info_poor_co2">Lớn hơn 1100 ppm</string>
    <string name="info_mod_co2">Từ 850 ppm đến 1100 ppm</string>
    <string name="info_good_co2">Nhỏ hơn 850 ppm</string>

    <!--CH2O-->
    <string name="info_header_ch2o">Nồng độ Formaldehyde (CH\u2082O)</string>
    <string name="info_poor_ch2o">Lớn hơn 0.12 mg/m³</string>
    <string name="info_mod_ch2o">Từ 0.05 mg/m³ đến 0.12 mg/m³</string>
    <string name="info_good_ch2o">Nhỏ hơn 0.05 mg/m³</string>

    <!--VOC-->
    <string name="info_header_vooc">Nồng độ VOC</string>
    <string name="info_poor_vooc">Lớn hơn 2 ppm</string>
    <string name="info_mod_vooc">Từ 1 ppm đến 2 ppm</string>
    <string name="info_good_vooc">Nhỏ hơn 1 ppm</string>

    <!--AQ-->
    <string name="info_header_aq">Chất lượng không khí (AQ)</string>
    <string name="info_poor_aq">Nhỏ hơn 80</string>
    <string name="info_mod_aq">Từ 80 đến 89</string>
    <string name="info_good_aq">Lớn hơn 89</string>

    <string name="good_title">Tốt -</string>
    <string name="mod_title">Khá -</string>
    <string name="poor_title">Kém -</string>
</resources>
