<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/info_threshold"
        android:gravity="center"
        android:textSize="25dp"
        style="@style/HeaderCellTable"
        android:textColor="@color/Black"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent">

        <TableLayout
            android:id="@+id/tb_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*">

            <!--1-->
            <TableRow
                style="@style/TableRowStyle"
                android:layout_width="match_parent">
                <TextView
                    android:text="@string/info_header"
                    style="@style/HeaderCellTable"
                    android:layout_column="0" />

                <TextView
                    android:text="@string/poor"
                    android:layout_column="1"
                    style="@style/HeaderCellTable"
                    android:background="@color/Red" />

                <TextView
                    android:text="@string/mod"
                    style="@style/HeaderCellTable"
                    android:layout_column="2"
                    android:background="@color/Yellow" />


                <TextView
                    android:text="@string/good"
                    style="@style/HeaderCellTable"
                    android:layout_column="3"
                    android:background="@color/Blue" />

            </TableRow>

            <TableRow
                style="@style/TableRowStyle">

                <TextView
                    android:text="@string/PM"
                    style="@style/HeaderCellTable"
                    android:layout_column="0"
                    android:padding="5dp" />

                <TextView
                    android:text="> 55.4"
                    android:layout_column="1"
                    style="@style/NormalCellTable"/>

                <TextView
                    android:text="25.4 - 55.4"
                    android:layout_column="2"
                    style="@style/NormalCellTable"/>

                <TextView
                    android:text="&lt; 25.4"
                    android:layout_column="3"
                    style="@style/NormalCellTable"/>

            </TableRow>

            <TableRow
                style="@style/TableRowStyle">

                <TextView
                    android:text="@string/Temperature"
                    style="@style/HeaderCellTable" />

                <TextView
                    android:text="&lt; 16\n> 30"
                    style="@style/NormalCellTable"/>

                <TextView
                    android:text="16 - 20\n24.4 - 30"
                    style="@style/NormalCellTable"/>

                <TextView
                    android:text="20 - 24.4"
                    style="@style/NormalCellTable"/>

            </TableRow>

            <TableRow
                style="@style/TableRowStyle">

                <TextView
                    android:text="@string/HM"
                    style="@style/HeaderCellTable" />

                <TextView
                    android:text="&lt; 30\n> 65"
                    style="@style/NormalCellTable"/>

                <TextView
                    android:text="30 - 45\n60 - 65"
                    style="@style/NormalCellTable"/>

                <TextView
                    android:text="45 - 60"
                    style="@style/NormalCellTable"/>

            </TableRow>

            <TableRow
                style="@style/TableRowStyle">

                <TextView
                    android:text="@string/CO2"
                    style="@style/HeaderCellTable"
                    android:layout_height="match_parent" />

                <TextView
                    android:text="> 1100"
                    style="@style/NormalCellTable"/>

                <TextView
                    android:text="850 - 1100"
                    style="@style/NormalCellTable"/>

                <TextView
                    android:text="&lt; 850"
                    style="@style/NormalCellTable"/>

            </TableRow>

            <TableRow
                style="@style/TableRowStyle">

                <TextView
                    android:text="@string/H2CO"
                    style="@style/HeaderCellTable" />

                <TextView
                    android:text="> 0.12"
                    style="@style/NormalCellTable"/>

                <TextView
                    android:text="0.05 - 0.12"
                    style="@style/NormalCellTable"/>

                <TextView
                    android:text="&lt; 0.05"
                    style="@style/NormalCellTable"/>

            </TableRow>

            <TableRow
                style="@style/TableRowStyle">

                <TextView
                    android:text="@string/VOC"
                    style="@style/HeaderCellTable" />

                <TextView
                    android:text="> 2"
                    style="@style/NormalCellTable"/>

                <TextView
                    android:text="1 - 2"
                    style="@style/NormalCellTable"/>

                <TextView
                    android:text="&lt; 1"
                    style="@style/NormalCellTable"/>

            </TableRow>

        </TableLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>